Changed colorscheme for ytop and kitty. Lowered transparency for kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -637,26 +637,42 @@ selection_background #fffacd
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-# Colorscheme from elenapan on github
-background  #282F37
-foreground  #F1FCF9
-cursorColor #F1FCF9
-color0      #20262C
-color1      #DB86BA
-color2      #74DD91
-color3      #E49186
-color4      #75DBE1
-color5      #B4A1DB
-color6      #9EE9EA
-color7      #F1FCF9
-color8      #465463
-color9      #D04E9D
-color10     #4BC66D
-color11     #DB695B
-color12     #3DBAC2
-color13     #825ECE
-color14     #62CDCD
-color15     #E0E5E5
+# Colorscheme from https://github.com/bcicen/vim-vice
+# special
+foreground   #fdfdfd
+background   #303030
+
+# black
+color0       #303030
+color8       #878787
+
+# red
+color1       #ff00ff
+color9       #ff87d7
+
+# green
+color2       #a3d4a3
+color10      #afffd7
+
+# yellow
+color3       #ffffaf
+color11      #ffffaf
+
+# blue
+color4       #87ffff
+color12      #afffff
+
+# magenta
+color5       #afafd7
+color13      #ffafdf
+
+# cyan
+color6       #87ffff
+color14      #afffff
+
+# white
+color7       #878787
+color15      #ffffff
 
 mark1_foreground black
 
