--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,17 +1,23 @@
-music_directory		"~/shared/Music"
-db_file			"~/.config/mpd/database"
-log_file		"syslog"
-playlist_directory	"~/.config/mpd/playlists"
-pid_file		"~/.config/mpd/pid"
-state_file		"~/.config/mpd/state"
-sticker_file		"~/.config/mpd/sticker.sql"
+music_directory         "~/shared/Music"
+db_file                 "~/.config/mpd/database"
+log_file                "syslog"
+playlist_directory      "~/.config/mpd/playlists"
+pid_file                "~/.config/mpd/pid"
+state_file              "~/.config/mpd/state"
+sticker_file            "~/.config/mpd/sticker.sql"
 
 auto_update "yes"
 
-
 audio_output {
-	type	"pulse"
-	name	"pulse audio"
+    type    "pulse"
+    name    "pulse audio"
 }
 
 bind_to_address "0.0.0.0"
+
+audio_output {
+    type    "fifo"
+    name    "my_fifo"
+    path    "/tmp/mpd.fifo"
+    format  "44100:16:2"
+}
