--- a/.config/i3/config
+++ b/.config/i3/config
@@ -21,7 +21,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec --no-startup-id dmenu_run
 
 # applications
 bindsym $mod+F2 exec firefox
