--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,7 +15,8 @@ font pango:monospace 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+#bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec $HOME/.config/i3/start_shell.sh
 
 # kill focused window
 bindsym $mod+Shift+q kill
