--- a/.config/i3/config
+++ b/.config/i3/config
@@ -167,6 +167,8 @@ gaps outer -2
 smart_gaps on
 smart_borders on
 
+exec --no-startup-id /usr/lib/mate-polkit/polkit-mate-authentication-agent-1
+
 # wallpaper
 exec_always --no-startup-id ~/.wallpaper/wallpaper_timer > ~/.wallpaper/timer_logs
 
