Added connection editor to polybar

--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -31,6 +31,8 @@ type = custom/script
 ; Command to be executed (using "/usr/bin/env sh -c [command]")
 exec = ~/.config/polybar/scripts/check-network
 
+click-left = nm-connection-editor
+
 ; Conditional command that, if defined, needs to exit successfully
 ; before the main exec command is invoked.
 ; Default: ""
