Added background to all polybar modules

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -360,6 +360,9 @@ time = %H:%M
 format = <label>
 format-padding = 2
 format-foreground = ${color.fg}
+format-background = ${color.mf}
+format-underline = ${color.bg}
+format-overline = ${color.bg}
 ; Available tokens:
 ;   %date%
 ;   %time%
@@ -693,9 +696,22 @@ icon-pause = Playing
 type = internal/network
 interface = enp3s0f1
 
+format-connected-background = ${color.mf}
+format-connected-underline = ${color.bg}
+format-connected-overline = ${color.bg}
+format-connected-padding = 2
+format-connected-margin = 0
+
 [module/wireless-network]
 type = internal/network
 interface = wlp2s0
+
+format-connected-background = ${color.mf}
+format-connected-underline = ${color.bg}
+format-connected-overline = ${color.bg}
+format-connected-padding = 2
+format-connected-margin = 0
+
 
 ; Normal Module
 [module/network]
