Added vpn to polybar

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -160,7 +160,7 @@ font-2 = "xos4 Terminus:size=14;1"
 
 modules-left = workspaces cpu temperature memory network 
 modules-center = checklight mpd alsa
-modules-right = wired-network wireless-network checknetwork battery date
+modules-right = vpn wired-network wireless-network checknetwork battery date
 ; add colors-switch to change colors
 
 ; The separator will be inserted between the output of each module
