--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -23,6 +23,43 @@ format-overline = ${color.bg}
 format-padding = 2
 format-margin = 0
 
+[module/vpn]
+type = custom/script
+
+; Available tokens:
+;   %counter%
+; Command to be executed (using "/usr/bin/env sh -c [command]")
+exec = ~/.config/polybar/scripts/check-vpn
+
+click-left = nm-connection-editor &
+
+; Conditional command that, if defined, needs to exit successfully
+; before the main exec command is invoked.
+; Default: ""
+;;exec-if = ""
+
+; Will the script output continous content?
+; Default: false
+tail = true
+
+; Seconds to sleep between updates
+; Default: 2 (0 if `tail = true`)
+interval = 5
+
+; Available tags:
+;   <output> - deprecated
+;   <label> (default)
+;;format = <label>
+;;format-background = #999
+;;format-foreground = #000
+;;format-padding = 4
+format-background = ${color.mf}
+format-underline = ${color.bg}
+format-overline = ${color.bg}
+format-padding = 2
+format-margin = 0
+
+
 [module/checknetwork]
 type = custom/script
 
@@ -31,7 +68,7 @@ type = custom/script
 ; Command to be executed (using "/usr/bin/env sh -c [command]")
 exec = ~/.config/polybar/scripts/check-network
 
-click-left = nm-connection-editor
+click-left = nm-connection-editor &
 
 ; Conditional command that, if defined, needs to exit successfully
 ; before the main exec command is invoked.
