dmenu do mod+shift+space

--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -1,7 +1,7 @@
-"pactl set-sink-volume @DEFAULT_SINK@ +1000"
+"pactl set-sink-volume @DEFAULT_SINK@ +5%"
     XF86AudioRaiseVolume
 
-"pactl set-sink-volume @DEFAULT_SINK@ -1000"
+"pactl set-sink-volume @DEFAULT_SINK@ -5%"
     XF86AudioLowerVolume
 
 "pactl set-sink-mute @DEFAULT_SINK@ toggle"
