--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,7 +22,7 @@ bindsym $mod+Return exec $HOME/.config/kitty/start_shell.sh
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+Shift+Return exec --no-startup-id dmenu_run
 
 # applications
 bindsym $mod+F2 exec firefox
