Changed polybar to work with multimonitor setup

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -40,7 +40,7 @@ include-file = ~/.config/polybar/user_modules.ini
 ; If unspecified, the application will pick the first one it finds.
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-monitor =
+monitor = ${env:MONITOR:}
 
 ; Use the specified monitor as a fallback if the main one is not found.
 monitor-fallback =
@@ -158,7 +158,7 @@ font-2 = "xos4 Terminus:size=14;1"
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
-modules-left = workspaces cpu temperature memory network 
+modules-left = i3 cpu temperature memory network 
 modules-center = checklight mpd alsa
 modules-right = vpn wired-network wireless-network checknetwork battery date
 ; add colors-switch to change colors
