--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -457,8 +457,8 @@ label-unmounted = %mountpoint%: not mounted
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;;[module/i3]
-;;type = internal/i3
+[module/i3]
+type = internal/i3
 
 ; Only show workspaces defined on the same output as the bar
 ;
@@ -466,55 +466,68 @@ label-unmounted = %mountpoint%: not mounted
 ; on different bars
 ;
 ; Default: false
-;;pin-workspaces = true
+pin-workspaces = true
 
 ; This will split the workspace name on ':'
 ; Default: false
-;;strip-wsnumbers = true
+strip-wsnumbers = true
 
 ; Sort the workspaces by index instead of the default
 ; sorting that groups the workspaces by output
 ; Default: false
-;;index-sort = true
+index-sort = true
 
 ; Create click handler used to focus workspace
 ; Default: true
-;;enable-click = false
+enable-click = true
 
 ; Create scroll handlers used to cycle workspaces
 ; Default: true
-;;enable-scroll = false
-
-; Wrap around when reaching the first/last workspace
-; Default: true
-;;wrapping-scroll = false
-
-; Set the scroll cycle direction 
-; Default: true
-;;reverse-scroll = false
-
-; Use fuzzy (partial) matching on labels when assigning 
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces 
-; containing 'code' in the label
-; Default: false
-;;fuzzy-match = true
+enable-scroll = true
 
 ; ws-icon-[0-9]+ = label;icon
 ; NOTE: The label needs to match the name of the i3 workspace
-;;ws-icon-0 = 1;♚
-;;ws-icon-1 = 2;♛
-;;ws-icon-2 = 3;♜
-;;ws-icon-3 = 4;♝
-;;ws-icon-4 = 5;♞
-;;ws-icon-default = ♟
+ws-icon-0 = 1;1
+ws-icon-1 = 2;2
+ws-icon-2 = 3;3
+ws-icon-3 = 4;4
+ws-icon-4 = 5;5
+ws-icon-5 = 6;6
+ws-icon-6 = 7;7
+ws-icon-7 = 8;8
+ws-icon-8 = 9;9
+ws-icon-9 = 10;10
+ws-icon-default = _
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
 
 ; Available tags:
 ;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
 ;   <label-mode> (default)
-;;format = <label-state> <label-mode>
+format = <label-state>
+format-background = ${color.mf}
+format-underline = ${color.bg}
+format-overline = ${color.bg}
+format-padding = 2
+format-margin = 0
+
+label-monitor = %name%
+
+label-focused = %icon%
+label-focused-foreground = ${color.ac}
+
+label-unfocused = %icon%
+
+label-visible = %icon%
+
+label-urgent = %icon%
+label-urgent-foreground = ${color.red}
+label-urgent-background = ${color.mf}
+
+label-focused-padding = 1
+label-urgent-padding = 1
+label-unfocused-padding = 1
+label-visible-padding = 1
 
 ; Available tokens:
 ;   %mode%
